Bugfix: Aligned album song listing columns #37

--- a/src/themes/base/sass/components/_tables.scss
+++ b/src/themes/base/sass/components/_tables.scss
@@ -3,13 +3,15 @@
  */
 .table-row {
   .cell-first {
-    width: 40px;
+    width: $song-row-height;
+    min-width: $song-row-height;
     text-align: center;
     color: rgba($color-text-dark, 0.5);
     font-size: 95%;
   }
   .cell-last {
-    width: 60px;
+    width: $song-row-height * 2;
+    min-width: $song-row-height * 2;
     text-align: right;
     color: rgba($color-text-dark, 0.5);
     font-size: 95%;
